# fetterbrwber

./: .gitignore  CMakeLists.txt  README.md  download_deps.cmake  otherreadme.md  testsetup.sh
.github/workflows/: build.yml
client/: debug.html  index.html  package.json  styles.css
client/js/: check-syntax.js  effects.js  game.js  input.js  main.js  math.js  network.js  player.js  renderer.js  ui.js
server/: lua_server.lua  server.cpp
